# shr-config

./: .gitignore  AUTHORS  INSTALL  Makefile  Makefile.am  Makefile.decl  README  TODO  abstract.vala  autogen.sh  configure.in  connectivity.vala  gps.vala  main.vala  power.vala
data/: Makefile.am  shr-config.desktop  vala-settings.desktop  vala-settings.desktop~
src/: Makefile.am  TODO  abstract.vala  connectivity.vala  gps.vala  main.vala  power.vala  profiles.vala
