# Makefile.am -- Process this file with automake to produce Makefile.in

#Subdirectories to process
#SUBDIRS = vapi eflvala tests examples
SUBDIRS = src data

NULL =

#pkgconfigdir = $(libdir)/pkgconfig
#pkgconfig_DATA = eflvala-1.0.pc

#EXTRA_DIST += eflvala-1.0.pc

MAINTAINERCLEANFILES = aclocal.m4 compile config.guess config.sub \
                       configure depcomp install-sh ltmain.sh     \
                       Makefile.in missing config.h.in            \
                       $(NULL)
#                       mkinstalldirs
#                       eflvala-1.0.pc

