include $(top_srcdir)/Makefile.decl

filesdir = $(datadir)/vala-settings/icons

files_DATA = \
icon_connectivity.png \
icon_power.png \
shr_settings.png \
icon_datetime.png \
icon_profiles.png \
icon_gps.png \
icon_quit.png \
icon_others.png \
icon_services.png \
icon_phone.png \
$(NULL)

desktopdir   = $(datadir)/applications
desktop_DATA = vala-settings.desktop

EXTRA_DIST += $(files_DATA)

CLEANFILES = Makefile

MAINTAINERCLEANFILES = Makefile.in
